...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="4g7-ni-Ra0" secondAttribute="bottom" id="d7O-D9-XJ6"/>
                            <constraint firstItem="lWO-6C-hpw" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="gi4-ES-Ef5"/>
                            <constraint firstItem="lWO-6C-hpw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="wEf-fh-7m4"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Music Students" id="IBr-Q0-HRB">
                        <barButtonItem key="rightBarButtonItem" image="plus" catalog="system" id="jY0-Hx-rsY">
                            <connections>
                                <action selector="addNewStudent:" destination="BYZ-38-t0r" id="6ms-z1-rZA"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
